# dockerlogs

./: Dockerfile  README.md  pyproject.toml
dockerlogs/: cli.py  dockerlogs.py  outputs.py  tailers.py
tests/: test_dockerlogs.py
