[tool.poetry]
name = "dockerlogs"
version = "0.1.0"
description = ""
authors = ["Benedikt Kristinsson <benedikt@lokun.is>"]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^4.4.1"
loguru = "^0.5.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
dockertailer = 'dockerlogs.cli:dockertailer'
filetailer = 'dockerlogs.cli:filetailer'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
